--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,17 @@ a {
 * {
     box-sizing: border-box;
 }
+
+.dayStats {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 20px;
+    border: 1px solid #eaeaea;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
